getting oauth ready
